--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -129,7 +129,7 @@
 }
 
 .sidebar .author__desktop {
-  display: none;
+  display: block;
   @media screen and (min-width: 1024px) {
     display: block;
   }
@@ -182,8 +182,8 @@
 }
 
 .author__urls {
-  display: none;
-  position: absolute;
+  display: block;
+  position: relative;
   right: 0;
   margin-top: 15px;
   padding: 10px;
@@ -258,3 +258,4 @@
     }
   }
 }
+
